# datachabot

./: .env.example  README.md  pyproject.toml
datachatbot/: chat.py  chat_view_model.py  clear.py  ingest.py  main.py  retrieve.py  utils.py
datachatbot/components/: document_splitter.py  documents.py  embeddings.py  llm.py  qa_model.py  vectorstore.py
datachatbot/components/llm/: falcon7bllm.py  llm.py  open_ai_llm.py
datachatbot/components/vector_store/: vectorstore.py
datachatbot/utils/: file_manager.py  formatter.py
